This and that, maybe even a little bit of these and those